--- a/packages/theme_ufe/themes/ufe/master.css
+++ b/packages/theme_ufe/themes/ufe/master.css
@@ -31,7 +31,7 @@ body {
 
 #header {
   height: 285px;
-  background: url(images/ufe_header_01.jpg) top center no-repeat;
+  background: url(images/UFE-Store-Banner-FINAL.jpg) top center no-repeat;
   width: 960px;
   overflow: hidden;
   background-color: #000;
